<resources>
    <string name="app_name">Invasive Species Mapper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="support">About App</string>
    <string name="s8a">Specify</string>
    <string name="bfoop">Take Picture</string>
    <string name="maneno">English</string>
    <string name="stst">Invasive Species is a subset of JiMapp System. JiMapp is a customizable spatial data collection android app that facilitates the simple collection of georeferenced information. \n It comes along with a fully equipped web display application. \n For more information about this system please call 0717534281.</string>
    <string name="but1">Collect Data</string>
    <string name="but2">Send Bulk Data</string>
    <string name="but3">View Data</string>
    <string name="locstat">Scanning Location :</string>
    <string name="reggo">Register</string>
    <string name="fulnem">Username</string>
    <string name="fono">Phone Number</string>
    <string name="fonoo">07********</string>
    <string name="emailad">E-mail Address</string>
    <string name="countrii">Country: </string>
    <string name="regista">Register</string>
    <string name="org">Organization</string>
    <string name="cons">Conservancy</string>
    <string name="rback">Back</string>
    <string name="snt">Data Sent Successfully</string>
    <string name="pwad">Password</string>
    <string name="enda">OK</string>
    <string name="pwada">use assigned password</string>
    <string name="badnet">Please ensure your Internet connection is active.</string>
    <string name="notreg">Please register first for better services</string>
    <string name="notorg">Please ensure you select an organisation and a conservancy first.</string>
    <string name="mbaindi2">You have successfully registered</string>
    <string name="t1">Data Collection</string>
    <string name="t2">Invasive Species</string>
    <string name="t17">Dam Volume (cubic metres)</string>
    <string-array name="t3">
        <item>	SELECT	</item>
        <item>Acacia Reficiens</item>
        <item>Lantana Camara</item>
        <item>Water Hyacinth</item>
        <item>Chromolaena Odorata </item>
        <item>Opuntia Stricta</item>
        <item>Parthenium Hysterophorus </item>
        <item>Prosopis Juliflora Species</item>
        <item>Tithonia Diversifolia Species</item>
        <item>Opuntia Species</item>
        <item>Prosopis Species</item>
        <item>Other</item>
    </string-array>
    <string-array name="torgs">
        <item>	SELECT	</item>
        <item>Northern Rangelands Trust</item>
        <item>Laikipia Wildlife Forum</item>
        <item>Maasai Mara Game Reserve</item>
        <item>OTHER</item>
    </string-array>
    <string-array name="tcons">
        <item>	SELECT	</item>
        <item>	Biliqo Bulesa	</item>
        <item>	Buffalo National Reserve	</item>
        <item>	II Ngwesi	</item>
        <item>	Jaldessa	</item>
        <item>	Kalama	</item>
        <item>	Lekurruki	</item>
        <item>	Leparua	</item>
        <item>	Ltungai	</item>
        <item>	Mathew\'s Range Forest	</item>
        <item>	Meibae	</item>
        <item>	Melako	</item>
        <item>	Mpus Kutuk	</item>
        <item>	Naibunga	</item>
        <item>	Nakuprat-Gotu	</item>
        <item>	Namunyak	</item>
        <item>	Nasuulu	</item>
        <item>	Ngare Ndare	</item>
        <item>	Ruko	</item>
        <item>	Samburu National Reserve	</item>
        <item>	Sera	</item>
        <item>	Shaba National Reserve	</item>
        <item>	Shurr	</item>
        <item>	Songa	</item>
        <item>	West Gate	</item>
        <item>	Naikarra	</item>
        <item>	Talek	</item>
        <item>	Siana	</item>
        <item>	Ol Kinyei	</item>
        <item>	Naboisho	</item>
        <item>	Kerinkani	</item>
        <item>	Maji Moto	</item>
        <item>	Olare Orok	</item>
        <item>	Motorogi	</item>
        <item>	Lemek	</item>
        <item>	Olorien	</item>
        <item>	Mara North	</item>
        <item>	Ol Chorro	</item>
        <item>	Enonkishu	</item>
        <item>	Kimintet	</item>
        <item>	Mara Triangle	</item>
        <item>	Maasai Mara NR	</item>
        <item>	Olkiramatian	</item>
        <item>	Shompole	</item>

        <item>OTHER</item>
    </string-array>
    <string name="t4">Infested Area</string>
    <string name="t5">Canopy Closure (Invasive Species Coverage \u0025)</string>
    <string name="t51">Habitat</string>
    <string name="t51s">Settlement</string>
    <string name="t52">Species Abundance</string>
    <string name="t53">Land Ownership</string>
    <string name="t6">Gross Area</string>
    <string name="tunit">Units</string>
    <string-array name="t644">
        <item>	UNITS	</item>
        <item> Acres  </item>
        <item>	Hectares </item>
        <item>	Square Feet </item>
        <item>	Square Metres </item>
    </string-array>
    <string name="t10">County</string>
    <string-array name="t11">
        <item>	SELECT	</item>
        <item>	    Baringo 	</item>
        <item>	    Bomet 	</item>
        <item>	    Bungoma 	</item>
        <item>	    Busia 	</item>
        <item>	    Elgeyo Marakwet 	</item>
        <item>	    Embu 	</item>
        <item>	    Garissa 	</item>
        <item>	    Homa Bay 	</item>
        <item>	    Isiolo 	</item>
        <item>	    Kajiado 	</item>
        <item>	    Kakamega 	</item>
        <item>	    Kericho 	</item>
        <item>	    Kiambu 	</item>
        <item>	    Kilifi 	</item>
        <item>	    Kirinyaga 	</item>
        <item>	    Kisii 	</item>
        <item>	    Kisumu 	</item>
        <item>	    Kitui 	</item>
        <item>	    Kwale 	</item>
        <item>	    Laikipia 	</item>
        <item>	    Lamu 	</item>
        <item>	    Machakos 	</item>
        <item>	    Makueni 	</item>
        <item>	    Mandera 	</item>
        <item>	    Meru 	</item>
        <item>	    Migori 	</item>
        <item>	    Marsabit 	</item>
        <item>	    Mombasa 	</item>
        <item>	    Muranga 	</item>
        <item>	    Nairobi 	</item>
        <item>	    Nakuru 	</item>
        <item>	    Nandi 	</item>
        <item>	    Narok 	</item>
        <item>	    Nyamira 	</item>
        <item>	    Nyandarua 	</item>
        <item>	    Nyeri 	</item>
        <item>	    Samburu 	</item>
        <item>	    Siaya 	</item>
        <item>	    Taita Taveta 	</item>
        <item>	    Tana River 	</item>
        <item>	    Tharaka Nithi 	</item>
        <item>	    Trans Nzoia 	</item>
        <item>	    Turkana 	</item>
        <item>	    Uasin Gishu 	</item>
        <item>	    Vihiga 	</item>
        <item>	    Wajir 	</item>
        <item>	    West Pokot 	</item>


    </string-array>
    <string name="t12">Area Accessibility</string>
    <string name="t12s">Settlement</string>
    <string name="t13">Soil Investigation</string>
    <string name="t14">Foundation Excavation</string>
    <string name="t15">Foundation Concreting</string>
    <string name="t16">Optional</string>
    <string name="tcom">Comments</string>
    <string name="ty">Accessible</string>
    <string name="tn">Inaccessible</string>
    <string name="tys">Yes</string>
    <string name="tns">No</string>
    <string-array name="t311">
        <item>	SELECT	</item>
        <item> Edge: Upland / Wetland </item>
        <item>	Edge: Field / Forest </item>
        <item>	Edge: Lake </item>
        <item>	Edge: Roadside </item>
        <item>	Open Field </item>
        <item>	Old Field </item>
        <item>	Right-of-way </item>
        <item>	Forest: Conifer </item>
        <item>	Forest: Hardwood </item>
        <item>	Forest: Mixed </item>
        <item>	Dune </item>
        <item>	Beach </item>
        <item>	Park </item>
        <item>	Rocky Outcrops </item>
        <item>	Wetland: Marsh </item>
        <item>	Wetland: Swamp </item>
        <item>	Wetland: Bog </item>
        <item>	Stream bank </item>
        <item>	Yard / Garden </item>
        <item>	Agricultural Field </item>
        <item>	Abandoned lot / Home site </item>
        <item>	Other </item>
    </string-array>
    <string-array name="t31">
        <item>	SELECT	</item>
        <item> Trace     ( less than 1\u0025 ) </item>
        <item>	Low       ( 1.0\u0025 to 5.0\u0025 ) </item>
        <item>	Moderate  ( 5.1\u0025 to 25\u0025 ) </item>
        <item>	High      ( 25.1\u0025 to 100\u0025 ) </item>
    </string-array>
    <string-array name="t312">
        <item>	SELECT	</item>
        <item> Single Plant </item>
        <item>	Scattered Plants </item>
        <item>	Dense Monoculture </item>
        <item>	Scattered Dense Patches </item>
    </string-array>
    <string-array name="t313">
        <item>	SELECT	</item>
        <item> Private Land  </item>
        <item>	Public Land </item>
        <item>	Community Land </item>
        <item>	Unknown </item>
    </string-array>
    <string-array name="t33s">
        <item> Boma  </item>
        <item>	Modern </item>
        <item>	Other </item>
    </string-array>
    <string name="savo">Save</string>
    <string name="savv">Data has been successfully saved. Remember to post all data by clicking on "Send Bulk Data".</string>
    <string name="title_activity_maps">Map</string>
    <string name="err_msg_name">Please enter your full name</string>
    <string name="err_msg_email">Please enter a valid email address</string>
    <string name="err_msg_phone">Please enter a valid phone number</string>
    <string name="err_msg_org">Please enter your organisation name</string>
    <string name="err_msg_org_sel">Please select your organisation name</string>
    <string name="err_msg_cons">Please enter your conservation name</string>
    <string name="err_msg_cons_sel">Please select your conservation name</string>
    <string name="err_msg_role" translatable="false">Please enter your role/position/department</string>
    <string name="err_msg_password">Please enter a password.</string>
    <string name="err_msg_password2">Please make sure the passwords match.</string>
    <string name="err_msg_code">Please use the code sent to your email.</string>
    <string name="signin_details_wrong">Incorrect detail used. Contact the administrator (eouko@rcmrd.org) for help.</string>
    <string name="signin_password_wrong">Please use the right password.</string>
    <string name="signin_userinactive">Please contact the administrator (eouko@rcmrd.org) for approval.</string>
    <string name="signin_usersuspended">Please contact the administrator (eouko@rcmrd.org). Account is suspended.</string>
    <string name="signin_internet_off">Kindly turn on internet to receive updates.</string>
    <string name="signin_fill_all">Please fill in the login detail.</string>
    <string name="signin_setup_ctd">Please wait as setup is done.</string>
    <string name="signin_dev_error">E434: Please contact the administrator (eouko@rcmrd.org). </string>
    <string name="signin_message">Signing in…</string>
    <string name="signin_locations">Loading Organisations…</string>
    <string name="signin_getcode">Sending code…</string>
    <string name="signin_setpass">Changing password…</string>
    <string name="signin_passwordchanged">Password changed successfully</string>
    <string name="signin_setup">Fetching records…</string>
    <string name="signup_message">Registering…</string>
    <string name="constantori_nomedia">Folders not created. Ensure all permissions enabled.</string>
    <string name="constantori_nomedia_p">Please ensure all permissions enabled.</string>
    <string name="constantori_nowrite_a">Folders not created. Device is write-protected.</string>
    <string name="constantori_photo">Camera error. Take photograph again.</string>
    <string name="constantori_sim">No SIM Card!</string>
    <string name="constantori_perm_enabled">Permissions enabled.</string>
    <string name="code">Security Code</string>
    <string name="pwad2">Confirm Password</string>
</resources>