<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:background="@drawable/diastyle"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="Reset Password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:text="E-mail Address" />

    <EditText
        android:id="@+id/edtUseremail2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines = "1"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:textColor="@color/colorBlackText"
        android:inputType="textEmailAddress"
        android:hint="@string/emailad"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submitcode"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/bcomlinee"
            android:text="SUBMIT"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_600"
        android:layout_marginTop="15dp"
        android:textSize="12sp"
        android:textStyle="italic"
        android:text="Click the Submit button above to receive a security code in your e-mail. Use it below to reset your password." />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:text="Security Code" />

    <EditText
        android:id="@+id/edtUsercode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines = "1"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:textColor="@color/colorBlackText"
        android:inputType="textVisiblePassword"
        android:hint="@string/code"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:text="New Password" />

    <EditText
        android:id="@+id/edtUserpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines = "1"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:textColor="@color/colorBlackText"
        android:inputType="textPassword"
        android:hint="@string/pwad"
        />

    <EditText
        android:id="@+id/edtUserpassconfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines = "1"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:textColor="@color/colorBlackText"
        android:inputType="textPassword"
        android:hint="@string/pwad2"
        />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rback"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bcomlinee"
            android:text="@string/rback"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/sawa"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bcomlinee"
            android:text="@string/enda"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>